Fix PDF printout

--- a/docs/lectures/bib/bibliography.bib
+++ b/docs/lectures/bib/bibliography.bib
@@ -1,4 +1,48 @@
 
+@ARTICLE{Damasio2000-vd,
+  title       = "Subcortical and cortical brain activity during the feeling of
+                 self-generated emotions",
+  author      = "Damasio, A R and Grabowski, T J and Bechara, A and Damasio, H
+                 and Ponto, L L and Parvizi, J and Hichwa, R D",
+  affiliation = "Department of Neurology (Division of Cognitive Neuroscience)
+                 and PET Imaging Center, University of Iowa College of
+                 Medicine, 200 Hawkins Drive, Iowa City, Iowa 52242, USA.
+                 antonio-damasio@uiowa.edu",
+  journal     = "Nat. Neurosci.",
+  volume      =  3,
+  number      =  10,
+  pages       = "1049--1056",
+  month       =  oct,
+  year        =  2000,
+  url         = "http://dx.doi.org/10.1038/79871",
+  language    = "en",
+  issn        = "1097-6256",
+  pmid        = "11017179",
+  doi         = "10.1038/79871"
+}
+
+@ARTICLE{Harrison2010-nx,
+  title       = "The embodiment of emotional feelings in the brain",
+  author      = "Harrison, Neil A and Gray, Marcus A and Gianaros, Peter J and
+                 Critchley, Hugo D",
+  affiliation = "Department of Psychiatry, Brighton and Sussex Medical School,
+                 Sackler Centre for Consciousness Science, University of
+                 Sussex, Brighton BN1 9PR, United Kingdom.
+                 n.harrison@bsms.ac.uk",
+  journal     = "J. Neurosci.",
+  volume      =  30,
+  number      =  38,
+  pages       = "12878--12884",
+  month       =  sep,
+  year        =  2010,
+  url         = "http://dx.doi.org/10.1523/JNEUROSCI.1725-10.2010",
+  language    = "en",
+  issn        = "0270-6474, 1529-2401",
+  pmid        = "20861391",
+  doi         = "10.1523/JNEUROSCI.1725-10.2010",
+  pmc         = "PMC3044882"
+}
+
 @ARTICLE{Kochunov2016-cu,
   title       = "Heterochronicity of white matter development and aging
                  explains regional patient control differences in schizophrenia",
