--- a/docs/lectures/bib/bibliography.bib
+++ b/docs/lectures/bib/bibliography.bib
@@ -1,4 +1,168 @@
 
+@ARTICLE{Kim2017-rw,
+  title       = "Inhibitory Basal Ganglia Inputs Induce Excitatory Motor
+                 Signals in the Thalamus",
+  author      = "Kim, Jeongjin and Kim, Youngsoo and Nakajima, Ryuichi and
+                 Shin, Anna and Jeong, Minju and Park, Ah Hyung and Jeong,
+                 Yongcheol and Jo, Seonmi and Yang, Seungkyoung and Park,
+                 Hosung and Cho, Sung-Hwan and Cho, Kwang-Hyun and Shim, Insop
+                 and Chung, Jae Hoon and Paik, Se-Bum and Augustine, George J
+                 and Kim, Daesoo",
+  affiliation = "Department of Biological Sciences, KAIST, Daejeon 34141,
+                 Republic of Korea; Center for Neuroscience, KIST, Seoul 02792,
+                 Republic of Korea. Department of Biological Sciences, KAIST,
+                 Daejeon 34141, Republic of Korea; Graduate School of Medical
+                 Science and Engineering, KAIST, Daejeon 34141, Republic of
+                 Korea. Center for Functional Connectomics, KIST, Seoul 02792,
+                 Republic of Korea. Department of Biological Sciences, KAIST,
+                 Daejeon 34141, Republic of Korea. School of Computing, KAIST,
+                 Daejeon 34141, Republic of Korea. Department of Bio and Brain
+                 Engineering, KAIST, Daejeon 34141, Republic of Korea.
+                 Department of Science in Korean Medicine, Graduate School,
+                 College of Korean Medicine, Kyung Hee University, Seoul 02453,
+                 Republic of Korea. Center for Functional Connectomics, KIST,
+                 Seoul 02792, Republic of Korea; Lee Kong Chian School of
+                 Medicine, Nanyang Technological University, 11 Mandalay Road,
+                 Singapore, 308232, Singapore; Institute of Molecular and Cell
+                 Biology, 61 Biopolis Drive, Proteos, Singapore 138673,
+                 Singapore. Department of Biological Sciences, KAIST, Daejeon
+                 34141, Republic of Korea. Electronic address:
+                 daesoo@kaist.ac.kr.",
+  journal     = "Neuron",
+  volume      =  95,
+  number      =  5,
+  pages       = "1181--1196.e8",
+  month       =  aug,
+  year        =  2017,
+  url         = "http://dx.doi.org/10.1016/j.neuron.2017.08.028",
+  language    = "en",
+  issn        = "0896-6273, 1097-4199",
+  pmid        = "28858620",
+  doi         = "10.1016/j.neuron.2017.08.028"
+}
+
+@ARTICLE{Zapiec2017-nz,
+  title       = "A ventral glomerular deficit in Parkinson's disease revealed
+                 by whole olfactory bulb reconstruction",
+  author      = "Zapiec, Bolek and Dieriks, Birger V and Tan, Sheryl and Faull,
+                 Richard L M and Mombaerts, Peter and Curtis, Maurice A",
+  affiliation = "Max Planck Research Unit for Neurogenetics, Frankfurt,
+                 Germany. Department of Anatomy and Medical Imaging and Centre
+                 for Brain Research, Faculty of Medical and Health Science,
+                 University of Auckland, Auckland, New Zealand.",
+  journal     = "Brain",
+  volume      =  140,
+  number      =  10,
+  pages       = "2722--2736",
+  month       =  oct,
+  year        =  2017,
+  url         = "http://dx.doi.org/10.1093/brain/awx208",
+  keywords    = "VGLUT2; glomerulus; olfaction; synuclein; voxel",
+  language    = "en",
+  issn        = "0006-8950, 1460-2156",
+  pmid        = "28969383",
+  doi         = "10.1093/brain/awx208"
+}
+
+@ARTICLE{Papini2015-ed,
+  title       = "Behavioral neuroscience of psychological pain",
+  author      = "Papini, Mauricio R and Fuchs, Perry N and Torres, Carmen",
+  affiliation = "Department of Psychology, Texas Christian University, United
+                 States. Electronic address: m.papini@tcu.edu. Departments of
+                 Psychology and Biology, University of Texas Arlington, United
+                 States. Department of Psychology, University of Ja{\'e}n,
+                 Spain.",
+  journal     = "Neurosci. Biobehav. Rev.",
+  volume      =  48,
+  pages       = "53--69",
+  month       =  jan,
+  year        =  2015,
+  url         = "http://dx.doi.org/10.1016/j.neubiorev.2014.11.012",
+  keywords    = "Anterior cingulate cortex; Appetitive extinction; Frustration;
+                 Opioid receptors; Physical pain; Psychological pain; Reward
+                 devaluation; Reward loss; Reward omission; Roman high- and
+                 low-avoidance strains; Successive negative contrast",
+  language    = "en",
+  issn        = "0149-7634, 1873-7528",
+  pmid        = "25446953",
+  doi         = "10.1016/j.neubiorev.2014.11.012"
+}
+
+@ARTICLE{Melzack1965-va,
+  title    = "Pain mechanisms: a new theory",
+  author   = "Melzack, R and Wall, P D",
+  journal  = "Science",
+  volume   =  150,
+  number   =  3699,
+  pages    = "971--979",
+  month    =  nov,
+  year     =  1965,
+  url      = "https://www.ncbi.nlm.nih.gov/pubmed/5320816",
+  language = "en",
+  issn     = "0036-8075",
+  pmid     = "5320816",
+  doi      = "10.1126/science.150.3699.971"
+}
+
+@ARTICLE{Borbiro2015-ik,
+  title       = "Activation of {TRPV1} channels inhibits mechanosensitive Piezo
+                 channel activity by depleting membrane phosphoinositides",
+  author      = "Borbiro, Istvan and Badheka, Doreen and Rohacs, Tibor",
+  affiliation = "Department of Pharmacology and Physiology, Rutgers New Jersey
+                 Medical School, Newark, NJ 07103, USA. Department of
+                 Pharmacology and Physiology, Rutgers New Jersey Medical
+                 School, Newark, NJ 07103, USA. tibor.rohacs@rutgers.edu.",
+  journal     = "Sci. Signal.",
+  volume      =  8,
+  number      =  363,
+  pages       = "ra15",
+  month       =  feb,
+  year        =  2015,
+  url         = "http://dx.doi.org/10.1126/scisignal.2005667",
+  language    = "en",
+  issn        = "1937-9145, 1945-0877",
+  pmid        = "25670203",
+  doi         = "10.1126/scisignal.2005667",
+  pmc         = "PMC4527171"
+}
+
+@ARTICLE{Craig2002-ce,
+  title    = "How do you feel? Interoception: the sense of the physiological
+              condition of the body",
+  author   = "Craig, A D",
+  journal  = "Nat. Rev. Neurosci.",
+  volume   =  3,
+  number   =  8,
+  pages    = "655--666",
+  month    =  aug,
+  year     =  2002,
+  url      = "http://dx.doi.org/10.1038/nrn894",
+  language = "en",
+  issn     = "1471-003X",
+  pmid     = "12154366",
+  doi      = "10.1038/nrn894"
+}
+
+@ARTICLE{Wager2013-uw,
+  title       = "An {fMRI-based} neurologic signature of physical pain",
+  author      = "Wager, Tor D and Atlas, Lauren Y and Lindquist, Martin A and
+                 Roy, Mathieu and Woo, Choong-Wan and Kross, Ethan",
+  affiliation = "Department of Psychology and Neuroscience, University of
+                 Colorado, Boulder, 80305, USA. tor.wager@colorado.edu",
+  journal     = "N. Engl. J. Med.",
+  volume      =  368,
+  number      =  15,
+  pages       = "1388--1397",
+  month       =  apr,
+  year        =  2013,
+  url         = "http://dx.doi.org/10.1056/NEJMoa1204471",
+  language    = "en",
+  issn        = "0028-4793, 1533-4406",
+  pmid        = "23574118",
+  doi         = "10.1056/NEJMoa1204471",
+  pmc         = "PMC3691100"
+}
+
 @ARTICLE{Damasio2000-vd,
   title       = "Subcortical and cortical brain activity during the feeling of
                  self-generated emotions",
