Add Exam 4 date and time

--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -402,4 +402,6 @@ title: "Schedule"
     
 ## Finals Week, December 11 - 15
 
-### Exam 4 TBA
+### Mon, Dec 11 
+
+- **12:20-2:10 pm in 302 Boucke**
