Exam 4 review guide

--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -395,6 +395,8 @@ title: "Schedule"
 ### Wed, Dec 6
 
 - Review for Exam 4
+- Materials
+    - Study guide. | [HTML slides](lectures/260-2017-12-06-exam-3-study-guide.html) | [PDF](lectures/260-2017-12-06-exam-3-study-guide.pdf) |
 
 ### Fri, Dec 8
 
