Fix typo in Exam 4 review notes

--- a/lectures/260-2017-12-06-exam-4-study-guide.Rmd
+++ b/lectures/260-2017-12-06-exam-4-study-guide.Rmd
@@ -60,7 +60,7 @@ output:
 ## Neurophysiology
 
 - Resting potential
-    + In neuron at rest, [??] inside is greater than outside; What force(s) `____` push [Na+] inward?
+    + In neuron at rest, `____` inside is greater than outside; What force(s) `____` push [Na+] inward?
 - Ca++ influx is involved in `____`, `____`, and `____`.
 - EPSP/IPSPs are `____` than action potentials
 
