Add Cerebral Symphony

--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -401,6 +401,8 @@ title: "Schedule"
 ### Fri, Dec 8
 
 - The Cerebral Symphony
+- Materials
+    - | [HTML slides](lectures/260-2017-12-08-cerebral-symphony.html) |
 
 ---
     
